# ShaderConductor

./: BuildAll.py  CMakeLists.txt  README.md  azure-pipelines.yml
CI/AzurePipelines/: ContinuousBuild.yml
Include/ShaderConductor/: ShaderConductor.hpp
Source/: CMakeLists.txt
Source/Core/: CMakeLists.txt  ComPtr.hpp  ErrorHandling.cpp  ErrorHandling.hpp  ShaderConductor.cpp
Source/Tests/: CMakeLists.txt  Common.cpp  Common.hpp  CrossCompileTest.cpp  ReflectionTest.cpp
Source/Tests/Data/Expected/: CalcLight+Diffuse.Debug.dxilasm  CalcLight+Diffuse.Release.dxilasm  CalcLight+Diffuse.dxilasm  CalcLight+DiffuseSpecular.Debug.dxilasm  CalcLight+DiffuseSpecular.Release.dxilasm  CalcLight+DiffuseSpecular.dxilasm  Constant_PS.15.spvasm  Constant_PS.dxilasm  Constant_VS.15.spvasm  Constant_VS.dxilasm  DetailTessellation_HS.15.spvasm  DetailTessellation_HS.dxilasm  DetailTessellation_HS.msl  DotHalfPS.dxilasm  DotHalfPS.essl  DotHalfPS.msl  DotHalfPS.spvasm  Fluid_CS.15.spvasm  Fluid_CS.300.glsl  Fluid_CS.310.essl  Fluid_CS.410.glsl  Fluid_CS.50.hlsl  Fluid_CS.dxilasm  Fluid_CS.msl  HalfBufferPS.dxilasm  HalfBufferPS.essl  HalfBufferPS.glsl  HalfBufferPS.msl  HalfBufferPS.spvasm  HalfOutParamPS.dxilasm  HalfOutParamPS.essl  HalfOutParamPS.msl  HalfOutParamPS.spvasm  PNTriangles_DS.15.spvasm  PNTriangles_DS.300.essl  PNTriangles_DS.300.glsl  PNTriangles_DS.310.essl  PNTriangles_DS.410.glsl  PNTriangles_DS.dxilasm  PNTriangles_DS.msl  (+21 more)
Source/Tests/Data/Input/: CalcLightDiffuseSpecular.hlsl  Fluid_CS.hlsl  HalfDataType.hlsl  Subpass_PS.hlsl
Source/Tools/: CMakeLists.txt
Source/Wrapper/: CMakeLists.txt  Native.cpp  Native.h
